<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/rl"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#99000000"
        android:orientation="horizontal" >
  		<EditText
  		    android:layout_weight="1"
            android:id="@+id/et_search"
            android:layout_width="250dip"
            android:layout_height="40dip"
            android:textSize="20dip"
            android:hint="模糊搜索"
            />
        <ImageView
            android:layout_weight="1"
            android:id="@+id/btn_search"
            android:layout_width="60dip"
            android:layout_height="44dip"
            android:src="@drawable/button_search_moto"/>

      
    </LinearLayout>

    <com.baidu.mapapi.map.MapView
        android:id="@+id/bmapView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.07"
        android:clickable="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

        <RadioGroup
            android:id="@id/main_radio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/maintab_toolbar_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_btn_fujin"
                style="@style/main_tab_bottom"
                android:layout_marginTop="0.0dip"
                android:drawableTop="@drawable/icon_geo"
                android:text="@string/main_home" />

            <RadioButton
                android:id="@+id/radio_btn_changemode"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/bbk_search_layer"
                android:text="@string/main_news" />
            <RadioButton
                android:id="@+id/radio_btn_search_bus"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/icon_direction"
                android:text="@string/radio_btn_search_bus" />

            <RadioButton
                android:id="@+id/radio_btn_refresh"
                style="@style/main_tab_bottom"
                android:layout_marginTop="0.0dip"
                android:drawableTop="@drawable/icon_3_n"
                android:text="@string/main_manage_date" />

            

            <RadioButton
                android:id="@+id/radio_btn_more"
                style="@style/main_tab_bottom"
                android:layout_marginTop="0.0dip"
                android:drawableTop="@drawable/icon_5_n"
                android:text="@string/more" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>